--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
     <title>Discover Hidden Places</title>
   </head>
   <body>
+
+<section id="body">
+  <section id="header">
     <h1>Discover hidden places in the world around you</h1>
+  </section>
     <a href="https://trlcmcrjgj7jcadak38cidmrdaau469kocpjofij4unfamk5c59g.codecademy.cloud/">Download Excursion (Coming soon!)</a>
+  <p>
+    <video autoplay>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </p>
+  <section id="content">
+    <h1>Your personal travel guide</h1>
+  </section>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+
+    <img src="resources/images/camp.jpg">
+  <p>
+    <img src="resources/images/phone.png">
+  </p>
+    <h1>Coming Soon for iPhone and Android</h1>
+    <a href="https://trlcmcrjgj7jcadak38cidmrdaau469kocpjofij4unfamk5c59g.codecademy.cloud/">Download Excursion (Coming soon!)</a>
+</section>
+
+<section id="end">
+  <p>&#169; Excursion</p>
+</section>
   </body>
 </html>
